Uploaded image for project: 'Traffic Server'
  1. Traffic Server
  2. TS-834

Crash Report: InactivityCop::check_inactivity, event=2, UnixNet.cc:57

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • 3.1.0
    • 3.1.0, 3.0.1
    • Core
    • current trunk( the same time as v3.0), --enable-debug

    Description

      bt #1

      #0  0x00000000004d2c5c in Continuation::handleEvent (this=0x2aaaf4091b70, event=1, data=0x4b2d6d0) at I_Continuation.h:146
      146         return (this->*handler) (event, data);
      (gdb) bt
      #0  0x00000000004d2c5c in Continuation::handleEvent (this=0x2aaaf4091b70, event=1, data=0x4b2d6d0) at I_Continuation.h:146
      #1  0x00000000006ce196 in InactivityCop::check_inactivity (this=0x4b3f780, event=2, e=0x4b2d6d0) at UnixNet.cc:57
      #2  0x00000000004d2c5f in Continuation::handleEvent (this=0x4b3f780, event=2, data=0x4b2d6d0) at I_Continuation.h:146
      #3  0x00000000006f5830 in EThread::process_event (this=0x2aaaaae29010, e=0x4b2d6d0, calling_code=2) at UnixEThread.cc:140
      #4  0x00000000006f5b72 in EThread::execute (this=0x2aaaaae29010) at UnixEThread.cc:217
      #5  0x00000000004ff37d in main (argc=3, argv=0x7fff6f447418) at Main.cc:1958
      (gdb) info f
      Stack level 0, frame at 0x7fff6f446cb0:
       rip = 0x4d2c5c in Continuation::handleEvent(int, void*) (I_Continuation.h:146); saved rip 0x6ce196
       called by frame at 0x7fff6f446d00
       source language c++.
       Arglist at 0x7fff6f446ca0, args: this=0x2aaaf4091b70, event=1, data=0x4b2d6d0
       Locals at 0x7fff6f446ca0, Previous frame's sp is 0x7fff6f446cb0
       Saved registers:
        rbp at 0x7fff6f446ca0, rip at 0x7fff6f446ca8
      (gdb) x/80x this
      0x2aaaf4091b70: 0x0076a830      0x00000000      0x006d1902      0x00000000
      0x2aaaf4091b80: 0x00000000      0x00000000      0x0076a290      0x00000000
      0x2aaaf4091b90: 0x00000000      0x00000000      0x00000000      0x00000000
      0x2aaaf4091ba0: 0x00000000      0x00000000      0x00000000      0x00000000
      0x2aaaf4091bb0: 0x00000000      0x00000000      0x00000000      0x00000000
      0x2aaaf4091bc0: 0x00000000      0x00000000      0x00000000      0x00000000
      0x2aaaf4091bd0: 0x00000000      0x00000000      0x00000000      0x00000000
      0x2aaaf4091be0: 0x00000000      0x00000000      0x00000000      0x00000000
      0x2aaaf4091bf0: 0x00000000      0x00000000      0x00000000      0x00000000
      0x2aaaf4091c00: 0x00000000      0x00000000      0x00000000      0x00000000
      0x2aaaf4091c10: 0x00000000      0x00000000      0x00000000      0x00000000
      0x2aaaf4091c20: 0x00000000      0x00000000      0x00000000      0x00000000
      0x2aaaf4091c30: 0x00000000      0x00000000      0x00000000      0x00000000
      0x2aaaf4091c40: 0x00000000      0x00000000      0x00000000      0x00000000
      0x2aaaf4091c50: 0x00000000      0x00000000      0x00000000      0x00000000
      0x2aaaf4091c60: 0x00000000      0x00000000      0x00000000      0x00000000
      0x2aaaf4091c70: 0x00000000      0x00000000      0x00000000      0x00000000
      0x2aaaf4091c80: 0x00000000      0x00000000      0x00000000      0x00000000
      0x2aaaf4091c90: 0x00000000      0x00000000      0x00000000      0x00000000
      0x2aaaf4091ca0: 0x00000000      0x00000000      0x00000000      0x00000000
      

      bt #2

      #0  0x00000000004d2c5c in Continuation::handleEvent (this=0x11ed6000, event=1, data=0x11cbc610) at I_Continuation.h:146
      146         return (this->*handler) (event, data);
      (gdb) bt
      #0  0x00000000004d2c5c in Continuation::handleEvent (this=0x11ed6000, event=1, data=0x11cbc610) at I_Continuation.h:146
      #1  0x00000000006ce196 in InactivityCop::check_inactivity (this=0x2aaaac001f50, event=2, e=0x11cbc610) at UnixNet.cc:57
      #2  0x00000000004d2c5f in Continuation::handleEvent (this=0x2aaaac001f50, event=2, data=0x11cbc610) at I_Continuation.h:146
      #3  0x00000000006f5830 in EThread::process_event (this=0x2aaaaaf2a010, e=0x11cbc610, calling_code=2) at UnixEThread.cc:140
      #4  0x00000000006f5b72 in EThread::execute (this=0x2aaaaaf2a010) at UnixEThread.cc:217
      #5  0x00000000006f5181 in spawn_thread_internal (a=0x11cadae0) at Thread.cc:88
      #6  0x00000030ec2064a7 in start_thread () from /lib64/libpthread.so.0
      #7  0x00000030eb6d3c2d in clone () from /lib64/libc.so.6
      (gdb) info f
      Stack level 0, frame at 0x4198df60:
       rip = 0x4d2c5c in Continuation::handleEvent(int, void*) (I_Continuation.h:146); saved rip 0x6ce196
       called by frame at 0x4198dfb0
       source language c++.
       Arglist at 0x4198df50, args: this=0x11ed6000, event=1, data=0x11cbc610
       Locals at 0x4198df50, Previous frame's sp is 0x4198df60
       Saved registers:
        rbp at 0x4198df50, rip at 0x4198df58
      (gdb) info args
      this = (Continuation * const) 0x11ed6000
      event = 1
      data = (void *) 0x11cbc610
      (gdb) p this->handler_name
      $1 = 0x76a290 "(NetVConnHandler) & UnixNetVConnection::startEvent"
      (gdb) p *this
      $2 = {<force_VFPT_to_top> = {_vptr.force_VFPT_to_top = 0x76a830}, handler = 0x6d1902 <UnixNetVConnection::startEvent(int, Event*)>, 
        handler_name = 0x76a290 "(NetVConnHandler) & UnixNetVConnection::startEvent", mutex = {m_ptr = 0x0}, link = {<SLink<Continuation>> = {next = 0x0}, prev = 0x0}}
      

      bt #3

      #0  0x00000000004d2c5c in Continuation::handleEvent (this=0x49083d0, event=1, data=0x2cc33d0) at I_Continuation.h:146
      146         return (this->*handler) (event, data);
      (gdb) bt
      #0  0x00000000004d2c5c in Continuation::handleEvent (this=0x49083d0, event=1, data=0x2cc33d0) at I_Continuation.h:146
      #1  0x00000000006ce196 in InactivityCop::check_inactivity (this=0x2cd5960, event=2, e=0x2cc33d0) at UnixNet.cc:57
      #2  0x00000000004d2c5f in Continuation::handleEvent (this=0x2cd5960, event=2, data=0x2cc33d0) at I_Continuation.h:146
      #3  0x00000000006f5830 in EThread::process_event (this=0x2aaaab22d010, e=0x2cc33d0, calling_code=2) at UnixEThread.cc:140
      #4  0x00000000006f5b72 in EThread::execute (this=0x2aaaab22d010) at UnixEThread.cc:217
      #5  0x00000000006f5181 in spawn_thread_internal (a=0x2cb4a70) at Thread.cc:88
      #6  0x0000003f58a064a7 in start_thread () from /lib64/libpthread.so.0
      #7  0x0000003f57ed3c2d in clone () from /lib64/libc.so.6
      (gdb) info f
      Stack level 0, frame at 0x420dbf60:
       rip = 0x4d2c5c in Continuation::handleEvent(int, void*) (I_Continuation.h:146); saved rip 0x6ce196
       called by frame at 0x420dbfb0
       source language c++.
       Arglist at 0x420dbf50, args: this=0x49083d0, event=1, data=0x2cc33d0
       Locals at 0x420dbf50, Previous frame's sp is 0x420dbf60
       Saved registers:
        rbp at 0x420dbf50, rip at 0x420dbf58
      (gdb) info args
      this = (Continuation * const) 0x49083d0
      event = 1
      data = (void *) 0x2cc33d0
      (gdb) p this->handler_name
      $1 = 0x76a740 "(NetVConnHandler) & UnixNetVConnection::mainEvent"
      

      bt #4

      #0  0x00000000004d2c5c in Continuation::handleEvent (this=0x139cc980, event=1, data=0x1398d3d0) at I_Continuation.h:146
      146         return (this->*handler) (event, data);
      (gdb) bt
      #0  0x00000000004d2c5c in Continuation::handleEvent (this=0x139cc980, event=1, data=0x1398d3d0) at I_Continuation.h:146
      #1  0x00000000006ce196 in InactivityCop::check_inactivity (this=0x2aaaac0020a0, event=2, e=0x1398d3d0) at UnixNet.cc:57
      #2  0x00000000004d2c5f in Continuation::handleEvent (this=0x2aaaac0020a0, event=2, data=0x1398d3d0) at I_Continuation.h:146
      #3  0x00000000006f5830 in EThread::process_event (this=0x2aaaab22d010, e=0x1398d3d0, calling_code=2) at UnixEThread.cc:140
      #4  0x00000000006f5b72 in EThread::execute (this=0x2aaaab22d010) at UnixEThread.cc:217
      #5  0x00000000006f5181 in spawn_thread_internal (a=0x1397ea70) at Thread.cc:88
      #6  0x0000003c33c064a7 in start_thread () from /lib64/libpthread.so.0
      #7  0x0000003c330d3c2d in clone () from /lib64/libc.so.6
      (gdb) info f
      Stack level 0, frame at 0x42024f60:
       rip = 0x4d2c5c in Continuation::handleEvent(int, void*) (I_Continuation.h:146); saved rip 0x6ce196
       called by frame at 0x42024fb0
       source language c++.
       Arglist at 0x42024f50, args: this=0x139cc980, event=1, data=0x1398d3d0
       Locals at 0x42024f50, Previous frame's sp is 0x42024f60
       Saved registers:
        rbp at 0x42024f50, rip at 0x42024f58
      (gdb) info args
      this = (Continuation * const) 0x139cc980
      event = 1
      data = (void *) 0x1398d3d0
      (gdb) p this->handler_name
      $1 = 0xefbeaddeefbeadde <Address 0xefbeaddeefbeadde out of bounds>
      (gdb) p *this
      $2 = {<force_VFPT_to_top> = {_vptr.force_VFPT_to_top = 0x13d8afa1}, handler = 0xefbeaddeefbeadde, this adjustment -1171307680053154338, 
        handler_name = 0xefbeaddeefbeadde <Address 0xefbeaddeefbeadde out of bounds>, mutex = {m_ptr = 0xefbeaddeefbeadde}, link = {<SLink<Continuation>> = {
            next = 0xefbeaddeefbeadde}, prev = 0xefbeaddeefbeadde}}
      

      bt #5

      #0  0x00000000004d2c5c in Continuation::handleEvent (this=0x734a780, event=1, data=0x511a610) at I_Continuation.h:146
      146         return (this->*handler) (event, data);
      (gdb) bt
      #0  0x00000000004d2c5c in Continuation::handleEvent (this=0x734a780, event=1, data=0x511a610) at I_Continuation.h:146
      #1  0x00000000006ce196 in InactivityCop::check_inactivity (this=0x512c6e0, event=2, e=0x511a610) at UnixNet.cc:57
      #2  0x00000000004d2c5f in Continuation::handleEvent (this=0x512c6e0, event=2, data=0x511a610) at I_Continuation.h:146
      #3  0x00000000006f5830 in EThread::process_event (this=0x2aaaaaf2a010, e=0x511a610, calling_code=2) at UnixEThread.cc:140
      #4  0x00000000006f5b72 in EThread::execute (this=0x2aaaaaf2a010) at UnixEThread.cc:217
      #5  0x00000000006f5181 in spawn_thread_internal (a=0x510bae0) at Thread.cc:88
      #6  0x00000030ec2064a7 in start_thread () from /lib64/libpthread.so.0
      #7  0x00000030eb6d3c2d in clone () from /lib64/libc.so.6
      (gdb) info f
      Stack level 0, frame at 0x40417f60:
       rip = 0x4d2c5c in Continuation::handleEvent(int, void*) (I_Continuation.h:146); saved rip 0x6ce196
       called by frame at 0x40417fb0
       source language c++.
       Arglist at 0x40417f50, args: this=0x734a780, event=1, data=0x511a610
       Locals at 0x40417f50, Previous frame's sp is 0x40417f60
       Saved registers:
        rbp at 0x40417f50, rip at 0x40417f58
      (gdb) p *this
      $1 = {<force_VFPT_to_top> = {_vptr.force_VFPT_to_top = 0x76b1391}, handler = 0xefbeaddeefbeadde, this adjustment -1171307680053154338, 
        handler_name = 0xefbeaddeefbeadde <Address 0xefbeaddeefbeadde out of bounds>, mutex = {m_ptr = 0xefbeaddeefbeadde}, link = {<SLink<Continuation>> = {
            next = 0xefbeaddeefbeadde}, prev = 0xefbeaddeefbeadde}}
      (gdb) 
      

      Attachments

        1. TS-834.diff
          5 kB
          John Plevyak

        Activity

          People

            jplevyak John Plevyak
            zym Zhao Yongming
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: