TS-834: InactivityCopy::check_inactivity crash

git-svn-id: https://svn.apache.org/repos/asf/trafficserver/traffic/trunk@1144094 13f79535-47bb-0310-9956-ffa450edef68